# theseus

./: .gitignore  LICENSE  LabData.hs  Main.hs  README.md  Tests.hs  labyrinth.hs  main.cabal
